--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Lessons Learned</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Lessons Learned</title>
 </head>
 <body>
-    <header id="cabecalho">
-        <h1 id="titulo">Lições Aprendidas [Blocos 1, 2 e 3] | Trybe</h1>
-    </header>
-    <main id="conteudo-principal">
-        <img id="minha_foto" src="https://thumbs2.imgbox.com/ee/bf/U0SoaEPl_t.jpg" alt="Imagem Enio Nicael"/>
-    </main>
+  <header id="cabecalho">
+    <h1 id="titulo">Lições Aprendidas [Blocos 1, 2 e 3] | Trybe</h1>
+  </header>
+  <main id="conteudo-principal">
+      <img id="minha_foto" src="https://thumbs2.imgbox.com/ee/bf/U0SoaEPl_t.jpg" alt="Imagem Enio Nicael"/>
+      <ol id="licoes_aprendidas">
+        <li>Inteligência emocional</li>
+        <li>Empatia</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Box Model</li>
+        <li>Posicionamento</li>
+        <li>Organização</li>
+      </ol>
+  </main>
 </body>
 </html>
