--- a/index.html
+++ b/index.html
@@ -1,79 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>HTML</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-<header id="cabecalho">
-    <h1 id="titulo">Lições aprendidas- Trybe!!!</h1>
-    <nav id="nav">
-        <ul>
-          <li><a href="https://smithbernardo.github.io" target="_blank">Minhas Informações</a></li>
-          <li><a href="https://betrybe.com" target="_blank">Sobre a Trybe</a></li>
-          <li><a href="#rodape">Contato</a></li>
-        </ul>
-      </nav> 
-</header> 
-<article>
-    <section>
-    
-    </section>
 
-    <section>
-        <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
-    </section>
-    
-    <aside id="coluna">
-       <section id="lista1">    
-        <h2>Lista das lições já aprendidas</h2>
-        <ol id="licoes_aprendidas">
-            <li>Fundamentos do Desenvolvimento Web</li>
-            <li>Introdução Unix & Shell</li>
-            <li>Conhecimento sobre Unix & Bash</li>
-            <li>Conhecimento sobre a Internet</li>
-            <li>HTML & CSS</li>
-            <li>HTML Semântico</li>
-            <li>Git</li>
-            <li>Github</li>
-            <li>Empatia</li>
-            <li>Inspect</li>
-        </ol>
-        </section>
-        <section id="lista2">
-            <h3>Lista das lições que Desejo aprender</h3>
-            <ul id="licoes_a_aprender">
-                <li>JavaScript</li>
-                <li>DOM</li>
-                <li>Forms</li>
-                <li>CSS Responsive</li>
-                <li>ES6</li>
-                <li>HOF</li>
-                <li>Unit Tests</li>
-                <li>React</li>
-                <li>Node</li>
-                <li>SQL</li>                
+<head>
+    <meta charset="UTF-8">
+    <title>HTML</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+    <header id="cabecalho">
+        <h1 id="titulo">Lições aprendidas- Trybe!!!</h1>
+        <nav id="nav">
+            <ul>
+                <li><a href="https://smithbernardo.github.io" target="_blank">Minhas Informações</a></li>
+                <li><a href="https://betrybe.com" target="_blank">Sobre a Trybe</a></li>
+                <li><a href="#rodape">Contato</a></li>
             </ul>
-        </section>
-    </aside>
+        </nav>
+    </header>
     <article>
         <section>
-        <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a 
-            dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente
-             mudamos nosso paradigma quando somos expostos à pressão a muita informação. Meu aprendizado 
-             tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu
-              dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando 
-              tarefas antes impossiveis agora simples. </p>
+
         </section>
+
         <section>
-            <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar 
-                matéria e sempre nao gostei de provas. Na Trybe o aprendizado tem sido através 
-                de muita prática, tornando fácil e prazeroso o tempo de estudo. </p>
+            <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
         </section>
-    </article>   
-<footer id="rodape">
-    <p>Saiba mais sobre a <a href="https://betrybe.com" target="_blank">Trybe</a></p>
-</footer> 
+
+        <aside id="coluna">
+            <section id="lista1">
+                <h2>Lista das lições já aprendidas</h2>
+                <ol id="licoes_aprendidas">
+                    <li>Fundamentos do Desenvolvimento Web</li>
+                    <li>Introdução Unix & Shell</li>
+                    <li>Conhecimento sobre Unix & Bash</li>
+                    <li>Conhecimento sobre a Internet</li>
+                    <li>HTML & CSS</li>
+                    <li>HTML Semântico</li>
+                    <li>Git</li>
+                    <li>Github</li>
+                    <li>Empatia</li>
+                    <li>Inspect</li>
+                </ol>
+            </section>
+            <section id="lista2">
+                <h3>Lista das lições que Desejo aprender</h3>
+                <ul id="licoes_a_aprender">
+                    <li>JavaScript</li>
+                    <li>DOM</li>
+                    <li>Forms</li>
+                    <li>CSS Responsive</li>
+                    <li>ES6</li>
+                    <li>HOF</li>
+                    <li>Unit Tests</li>
+                    <li>React</li>
+                    <li>Node</li>
+                    <li>SQL</li>
+                </ul>
+            </section>
+        </aside>
+        <article>
+            <section>
+                <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente mudamos nosso paradigma quando somos expostos à pressão
+                    a muita informação. Meu aprendizado tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando tarefas antes
+                    impossiveis agora simples. </p>
+            </section>
+            <section>
+                <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e sempre nao gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. </p>
+            </section>
+        </article>
+        <footer id="rodape">
+            <p>Saiba mais sobre a <a href="https://betrybe.com" target="_blank">Trybe</a></p>
+        </footer>
 </body>
-</html> 
+
+</html>
