--- a/index.html
+++ b/index.html
@@ -1,112 +1,95 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8">
-  <title>HTML</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Shadows+Into+Light&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
-</head>
-
-<body>
-  <main>
-    <header id="cabecalho">
-      <h1 id="titulo">Lições aprendidas- Trybe!!!</h1>
-      <nav id="nav">
-        <ul>
-          <li><a href="https://smithbernardo.github.io" target="_blank">Minhas Informações</a></li>
-          <li><a href="https://betrybe.com" target="_blank">Sobre a Trybe</a></li>
-          <li><a href="#rodape">Contato</a></li>
+  <head>
+    <meta charset="UTF-8">
+    <title>HTML</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <main>
+      <header id="cabecalho">
+        <h1 id="titulo">Lições aprendidas- Trybe!!!</h1>
+        <nav id="nav">
+          <ul>
+            <li><a href="https://smithbernardo.github.io" target="_blank">Minhas Informações</a></li>
+            <li><a href="https://betrybe.com" target="_blank">Sobre a Trybe</a></li>
+            <li><a href="#rodape">Contato</a></li>
+          <ul>
+        </nav>
+      </header>
+      <figure>
+        <img id="logoTrybe" src="trybeLogo.png" alt="Logotipo da Trybe" style="width:110px;height:110px">
+        <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
+      </figure>
+      <div id="lista1">
+        <h2>Lista das lições já aprendidas</h2>
+        <ol id="licoes_aprendidas">
+          <li>Introdução Unix & Shell</li>
+          <li>Conhecimento sobre Unix & Bash</li>
+          <li>Conhecimento sobre a Internet</li>
+          <li>HTML & CSS</li>
+          <li>HTML Semântico</li>
+          <li>Git</li>
+          <li>Github</li>
+          <li>Fundamentos do Desenvolvimento Web </li>
+          <li>Empatia</li>
+          <li>Inspect</li>
+        </ol>
+      </div>
+      <aside id="lista2">
+        <h3>Lista das lições que Desejo aprender</h3>
+        <ul id="licoes_a_aprender">
+          <li>JavaScript</li>
+          <li>DOM</li>
+          <li>Forms</li>
+          <li>CSS Responsive</li>
+          <li>ES6</li>
+          <li>HOF</li>
+          <li>Unit Tests</li>
+          <li>React</li>
+          <li>Node</li>
+          <li>SQL</li>
         </ul>
-
-      </nav>
-    </header>
-    <figure>
-      <img id="logoTrybe" src="trybeLogo.png" alt="Logotipo da Trybe" style="width:110px;height:110px">
-      <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
-    </figure>
-    <div id="lista1">
-      <h2>Lista das lições já aprendidas</h2>
-    <ol id="licoes_aprendidas">
+      </aside>
+      <article class="lado-esquerdo">
+        <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente mudamos nosso paradigma quando somos expostos à pressão a muita informação. Meu aprendizado tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando tarefas antes impossiveis agora simples. </p>
+        </article>
+        <section class="lado-direito">
+          <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e nunca gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. A Boa vontade de todos os colaboradores nos faz sentir realmente parte do time.</p>
+        </section>
+        <table>
+          <tr>
+            <th id="trybeTabela">Trybe</th>
+            <th>Aulas 100% Online</th>
+            <th>Aulas on-site</th>
+            <th>Profissionais qualificados</th>
+            <th>Varias formas de pagamento</th>
+            <th>Profissionais 100% dedicados</th>
+            <th>Currículo sempre Atual</th>
+          </tr>
+          <tr>
+            <td>Ensino de qualidade</td>
+            <td>Parceria com as melhores empresas do Brasil</td>
+            <td>Preparação para Processos Seletivos</td>
+            <td>Capacitacao emocional e psicológica</td>
+            <td> Acessoria no mercado de trabalho</td>
+            <td>Pagamento após conseguir trabalho</td>
+            <td>Acompanhamento pós contratação </td>
+          </tr><br><br>
+        </table>
+        <footer id="rodape">
+          <h4>
+            <a href="#foto" title="Voltar ao topo"><img src="backTop.png" alt="HTML tutorial" style="width:50px;height:50px;"></a>
+            <a href="mailto:bernardosmithstech@gmail.com" target="_blank" title="Enviar email"><img src="mail_send.svg" alt="email do Bernardo" style="width:50px;height:50px"></a>
+            <a href="https://www.instagram.com/bernardosmithjp/" target="_blank"><img src="Instagram.png" title="Visite nosso Instagram" alt="Instagram do Bernardo" style="width:48px;height:48px;"></a>
+            <a href="https://www.linkedin.com/in/bernardosmith/" target="_blank"><img src="linkedin.png" title="Visite nosso LinkedIn" style="width:60px;height:45px;" alt="LinkedIn do Bernardo"></a>
+          </h4>
+          <p id="inforodape">Todo o código foi realizado com o conhecimento adquirido na <a href="https://betrybe.com" target="_blank">Trybe</a> ou no site <a href="https://w3schools.com">W3 Schools</a></p>
+        </footer>
+      </main>
+    </body>
+    </html>
     
-      <li>Introdução Unix & Shell</li>
-      <li>Conhecimento sobre Unix & Bash</li>
-      <li>Conhecimento sobre a Internet</li>
-      <li>HTML & CSS</li>
-      <li>HTML Semântico</li>
-      <li>Git</li>
-      <li>Github</li>
-      <li>Fundamentos do Desenvolvimento Web </li>
-      <li>Empatia</li>
-      <li>Inspect</li>
-    </ol>
-  </div>
-    <aside id="lista2">
-
-      <h3>Lista das lições que Desejo aprender</h3>
-      <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>DOM</li>
-        <li>Forms</li>
-        <li>CSS Responsive</li>
-        <li>ES6</li>
-        <li>HOF</li>
-        <li>Unit Tests</li>
-        <li>React</li>
-        <li>Node</li>
-        <li>SQL</li>
-      </ul>
-      
-    </aside>
-
-
-    <article class="lado-esquerdo">
-
-      <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente mudamos nosso paradigma quando somos expostos à pressão a muita
-        informação. Meu aprendizado tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando tarefas antes impossiveis agora
-        simples. </p>
-
-    </article>
-
-    <section class="lado-direito">
-      <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e nunca gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. A Boa vontade de todos os colaboradores
-        nos faz sentir realmente parte do time. </p>
-    </section>
-
-
-    <table>
-      <tr>
-        <th id="trybeTabela">Trybe</th>
-        <th>Aulas 100% Online</th>
-        <th>Aulas on-site</th>
-        <th>Profissionais qualificados</th>
-        <th>Varias formas de pagamento</th>
-        <th>Profissionais 100% dedicados</th>
-        <th>Currículo sempre Atual</th>
-      </tr>
-      <tr>
-        <td>Ensino de qualidade</td>
-        <td>Parceria com as melhores empresas do Brasil</td>
-        <td>Preparação para Processos Seletivos</td>
-        <td>Capacitacao emocional e psicológica</td>
-        <td> Acessoria no mercado de trabalho</td>
-        <td>Pagamento após conseguir trabalho</td>
-        <td>Acompanhamento pós contratação </td>
-      </tr><br> <br>
-    </table>
-
-    <footer id="rodape">
-      <h4>
-        <a href="#foto" title="Voltar ao topo"><img src="backTop.png" alt="HTML tutorial" style="width:50px;height:50px;"></a>
-        <a href="mailto:bernardosmithstech@gmail.com" target="_blank" title="Enviar email"><img src="mail_send.svg" alt="email do Bernardo" style="width:50px;height:50px"></a>
-        <a href="https://www.instagram.com/bernardosmithjp/" target="_blank"><img src="Instagram.png" title="Visite nosso Instagram" alt="Instagram do Bernardo" style="width:48px;height:48px;"></a>
-        <a href="https://www.linkedin.com/in/bernardosmith/" target="_blank"><img src="linkedin.png" title="Visite nosso LinkedIn" style="width:60px;height:45px;" alt="LinkedIn do Bernardo"></a>
-      </h4>
-      <p id="inforodape">Todo o código foi realizado com o conhecimento adquirido na <a href="https://betrybe.com" target="_blank">Trybe</a> ou no site <a href="https://w3schools.com">W3 Schools</a></p>
-    </footer>
-  </main>
-</body>
-
-</html>
